--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -117,7 +117,7 @@
 </head>
 
 <body>
-        {% include 'new-navbar.html' %}
+        {% include 'navbar.html' %}
 
         {% block content %}
         Replace Me
