--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+{% load static %}
 <h1>Project Management System User Registration</h1>
 <p>Registration page for normal users, don't go making superusers here!</p>
 {% endblock %}
