--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,6 +4,7 @@
 <html lang = 'en'>
 <head>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
         <meta charset="utf-8">
         <title>{{ title|title }} | Project Management System</title>
         <style>
@@ -47,13 +48,23 @@
                 .w3-container 
                 {overflow: hidden;
                 position: sticky;
-                position: -webkit-sticky}
+                position: -webkit-sticky;
+                font-family: 'Nunito';
+                }
 
                 .w3-container p
-                {padding: 35px 50px;
-                background-color: black;
-                color: white;
-                font-size: 20px;
+                {padding: 50px 50px;
+                background-color: white;
+                color: black;
+                font-size: 20px;         
+                }
+
+                .w3-container a
+                {padding: 50px 50px;
+                background-color: white;
+                color: black;
+                font-size: 20px;  
+                text-decoration: none;       
                 }
 
                 .container 
@@ -112,6 +123,36 @@
                 color: black;
                 text-decoration: none;
                 cursor: pointer;
+                }
+
+                .splash-image {
+                position: relative;
+                font-family: 'Nunito';
+                font-size: 96px;
+                text-align: center;
+                }
+
+                .centered {
+                position: absolute;
+                top: 43%;
+                left: 50%;
+                width: 80%;
+                transform: translate(-50%, -50%);
+                letter-spacing: 2px;
+                color: white;
+                }
+
+                .button {
+                background-color: #ddd;
+                border: none;
+                color: black;
+                padding: 10px 20px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                margin: 4px 2px;
+                cursor: pointer;
+                border-radius: 300px;
                 }
         </style>
 </head>
