--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -154,6 +154,12 @@
                 cursor: pointer;
                 border-radius: 300px;
                 }
+
+                html, body {
+                max-width: 100%;
+                overflow-x: hidden;
+                }
+
         </style>
 </head>
 
