--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -169,6 +169,8 @@
         {% block content %}
         Replace Me
         {% endblock %}
+
+        {% include 'footer.html' %}
 </body>
 
 <script>
