--- a/src/templates/splash.html
+++ b/src/templates/splash.html
@@ -76,22 +76,17 @@
 <div class = "w3-container" style = "background-color: white;">
     <p class = "splash-image" style = "font-size: 80px; padding-top: 200px;"><b>Testimonials</b></p>
     <p style = "float: left; width: 15%;text-align: center;margin: 200px 320px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 5px;">
-        <img src="{% static 'images/meetingc.jpg' %}" alt="meeting" style = "width:100%;"></img>
-        <br><b>Buy Projects</b>
-        <br>Search through listings of global mining projects. Then discuss things with the client in our virtual deal room.
-        <br><button class="button" style = "color:white;background-color:#B85C38;font-size:28px;padding:18px 36px;">Search Projects</button>
+        <img src="{% static 'images/GEA.png' %}" alt="meeting" style = "width:100%; background-color: grey;"></img>
+        <br>As a prospect generator, we had trouble getting projects to the big companies, with MineFinder pitching projects is much easier. <br><br><b>ANGELA DUNN</b><br>MD<br>
     </p>
-    <p style = "float: left; width: 15%;text-align: center;margin: 200px 70px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 5px;">
-        <img src="{% static 'images/sellc.jpg' %}" alt="sell" style = "width:100%;"></img>
-        <br><b>Sell Projects</b>
-        <br>Submit your project and display it through our listings. Then view applications by prospective buyers
-        <br><button class="button" style = "color:white;background-color:#B85C38;font-size:28px;padding:18px 36px;width: 100%;">Submit Projects</button>
+    <p style = "float: left; width: 15%;text-align: center;margin: 200px 60px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 5px;">
+        <img src="{% static 'images/MPX.png' %}" alt="sell" style = "width:100%; background-color: grey;"></img>
+        <br>MPX identifies, acquires and invests in mineral exploration across Australia. MineFinder has been instrumental in our success. <br><br><b>SIMON COHN</b><br> Exploration Manager<br>
+        
     </p>
-    <p style = "float: right; width: 15%;text-align: center;margin: 200px 280px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 5px;">
-        <img src="{% static 'images/auditc.jpg' %}" alt="audit" style = "width:100%;"></img>
-        <br><b>Audit Projects</b>
-        <br>Run a background check on listed projects to get a better idea of how a company is conducting their business.
-        <br><button class="button" style = "color:white;background-color:#B85C38;font-size:28px;padding:18px 36px;">Find Projects</button>
+    <p style = "float: right; width: 15%;text-align: center;margin: 200px 290px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 5px;">
+        <img src="{% static 'images/E79.png' %}" alt="audit" style = "width:100%;"></img>
+        <br>The E79 Trust uses MineFinder to evaluate potential early-stage investments. We have used other solutions before and find them very clunky compared to MineFinder. <br><br><b>CHARLOTTE ANDERSON</b><br> Director<br>  
     </p>
 </div>
 {% endblock %}
