--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -160,6 +160,10 @@
                 overflow-x: hidden;
                 }
 
+                .ordering{
+                  float:left;
+                }
+
         </style>
 </head>
 
