--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,5 +1,28 @@
 {% load static %}
 
-<div class="w3-container" style = "background-color: #2D2424">   
-    <p style = "float:left;background-color: #2D2424;color: white;">OreFox</p>
+<div class="w3-container" style = "background-color: #2D2424; padding-left: 25%;padding-top: 40px;">   
+    <div class = "ordering">
+    <p style = "background-color: #2D2424;color: white; padding: 0px; font-size: 36px;">OreFox</p>
+    <p style = "background-color: #2D2424;color: white; padding: 0px; font-size: 16px;">About</p>
+    <p style = "background-color: #2D2424;color: white; padding: 0px; font-size: 16px;">Projects</p>
+    <p style = "background-color: #2D2424;color: white; padding: 0px; font-size: 16px;">The Team</p>
+    <p style = "background-color: #2D2424;color: white; padding: 0px; font-size: 16px;">Blog</p>
+    </div>
+
+    <div class = "ordering">
+    <p style = "margin-left:350px;background-color: #2D2424;color: white; padding: 0px; font-size: 36px;">Quick Links</p>
+    <p style = "margin-left:350px;background-color: #2D2424;color: white; padding: 0px; font-size: 16px;">Contact</p>
+    <p style = "margin-left:350px;background-color: #2D2424;color: white; padding: 0px; font-size: 16px;">Help Centre</p>
+    <p style = "margin-left:350px;background-color: #2D2424;color: white; padding: 0px; font-size: 16px;">Facebook</p>
+    <p style = "margin-left:350px;background-color: #2D2424;color: white; padding: 0px; font-size: 16px;">Twitter</p>
+    <p style = "margin-left:350px;background-color: #2D2424;color: white; padding: 0px; font-size: 16px;">LinkedIn</p>
+    </div>
+
+    <div class = "ordering">
+    
+    </div>
+
+    <hr style = "margin-top: 200px; margin-right: 25%;">
+    <p style = "margin-top: 10px; background-color: #2D2424; color: white; padding-left: 0%; font-size: 12px;">© 2021 OreFox. All right reserved.</p>
 </div>
+
