Basic profile template
will get back to after register and login

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -2,6 +2,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Project Management System User Profile</h1>
-<p>All your sensitive information in one place: {{my_nam}}</p>
+
+{% load static %}
+
+<img src="{% static 'images/Bac.jpg' %}" alt="background" style="background-color:white;object-fit:fill;" width=2560 height=810>
+
+<div class = "w3-container w3-white" style = "height: 80%;">
+    <p >Test</p>
+</div>
 {% endblock %}
+
+
+
+
+
+
+
+
+<!-- <p>All your sensitive information in one place: {{my_nam}}</p> -->
