--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -3,6 +3,12 @@
 {% block content %}
 
 {% load static %}
-<h1>Project Management System User Registration</h1>
-<p>Registration page for normal users, don't go making superusers here!</p>
+
+<div class = "splash-image">
+    <img src="{% static 'images/darksplash2.png' %}" alt="OreFox Icon" style="background-color:white;object-fit:fill;" width=2560 height=1440>
+    <div style = "width: 50%; color: white; background-color: #5C3D2E; height: 100%;opacity: 90%; position: absolute; top: 0%;">
+        <p style="width:100%; padding-top: 20%; font-size: 36px;"><b>Log in to <span style = "color: #B85C38;">MineFinder</span></b></p>
+    </div>
+</div>
+
 {% endblock %}
