--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -11,4 +11,11 @@
     </div>
 </div>
 
+<form action = "" method = "POST">
+    {% csrf_token %}
+    <p>Add List:</p>
+    {{ formlist }}
+    <input type="submit" value="Submit">
+</form>
+
 {% endblock %}
