--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -13,8 +13,8 @@
 
 <form action = "" method = "POST">
     {% csrf_token %}
-    <p>Add List:</p>
-    {{ formlist }}
+    <p>Register into MineFinder:</p>
+    {{ formlogin }}
     <input type="submit" value="Submit">
 </form>
 
