--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 <div class="w3-container w3-white">
-    <img src="{% static 'images/logonew.png' %}" alt="OreFox Icon" style="float:left;padding-top:28px;padding-bottom:28px;padding-left:28px;background-color:white;" width=300 height=120>
+    <img src="{% static 'images/logonew.png' %}" alt="OreFox Icon" style="float:left;padding-top:28px;padding-bottom:28px;padding-left:28px;background-color:white;" width=300 height=120 onclick="location.href='/'">
     <!-- <p style = "float:right;">Hello<i>{{request.user}}</i> how are you?</p>
     <p style = "float:right;">Board Name: {{request.POST.title}}<p>
     <a style = "float:right;" href="profile/" >{{request.user}}'s profile</a> -->
@@ -12,7 +12,7 @@
     <p style = "float:right;">Projects</p>
     <p style = "float:right;">FAQ</p>
     <p style = "float:right;">Deal Room</p>
-    <p style = "float:right;">Gallery</p>
+    <a style = "float:right;" href="gallery">Gallery</a>
     <p style = "float:right;">Upload Project</p>
 </div>
 
