Updated login, register
Implementing URLs of native django user feature

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -129,6 +129,7 @@
                 position: relative;
                 font-family: 'Nunito';
                 font-size: 96px;
+                line-height: 48px;
                 text-align: center;
                 }
 
@@ -162,6 +163,10 @@
 
                 .ordering{
                   float:left;
+                }
+
+                a{
+                  text-decoration: none;
                 }
                 
         </style>
