--- a/src/templates/splash.html
+++ b/src/templates/splash.html
@@ -5,7 +5,7 @@
 {% load static %}
 <div class = "splash-image">
     <img src="{% static 'images/darksplash2.png' %}" alt="OreFox Icon" style="background-color:white;object-fit:fill;" width=2560 height=1440>
-    <div class = "centered"><b>Project promotion and evaluation made smarter</b></div>
+    <div class = "centered" style = "line-height: 96px;"><b>Project promotion and evaluation made smarter</b></div>
     <div class = "centered" style = "font-size:36px;padding-top:400px;">MineFinder is a global platform connecting buyers and sellers of mineral exploration and mining projects.</div>
     <div class = "centered" style = "padding-top:600px;"><button class="button" style = "color:white;background-color:#B85C38;font-size:28px;padding:18px 36px;"><a href = "register/"><b>Register Now</b></a></button></div>
 </div>
@@ -34,7 +34,7 @@
 
 <div class = "banner">
     <img src = "{% static 'images/canyon.jpg' %}" alt = "canyon" width = 51% ></img>
-    <div class = "splash-image" style="width:49%;height:1504px;float:right;background-color: #E0C097;margin-top: 200px;text-align: left;color: #5C3D2E;padding:200px;font-size: 78px;"><b>MineFinder is a global platform designed for collaboration on mining and exploration projects, combining data rooms and deal management to allow easy and efficient due diligence.</b></div>
+    <div class = "splash-image" style="width:49%;height:1504px;float:right;background-color: #E0C097;margin-top: 200px;text-align: left;color: #5C3D2E;padding:200px;font-size: 78px; line-height: 96px;"><b>MineFinder is a global platform designed for collaboration on mining and exploration projects, combining data rooms and deal management to allow easy and efficient due diligence.</b></div>
 </div>
 
 <div class = "w3-container" style = "background-color: white;">
