--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -168,6 +168,16 @@
                 a{
                   text-decoration: none;
                 }
+
+                input[type=text], select {
+                  width: 50%;
+                  padding: 12px 20px;
+                  margin: 8px 0;
+                  display: inline-block;
+                  border: 1px solid #ccc;
+                  border-radius: 4px;
+                  box-sizing: border-box;
+                }
                 
         </style>
 </head>
