--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -8,14 +8,21 @@
     <img src="{% static 'images/darksplash2.png' %}" alt="OreFox Icon" style="background-color:white;object-fit:fill;" width=2560 height=1440>
     <div style = "width: 50%; color: white; background-color: #5C3D2E; height: 100%;opacity: 90%; position: absolute; top: 0%;">
         <p style="width:100%; padding-top: 20%; font-size: 36px;"><b>Login into <span style = "color: #B85C38;">MineFinder</span></b></p>
+        <div style = "font-size: 24px;">
+            <form action = "" method = "POST">
+                {% csrf_token %}
+                {{ formlogin }}
+                <input type="submit" value="Submit">
+            </form>
+        </div>
     </div>
 </div>
 
-<form action = "" method = "POST">
+<!-- <form action = "" method = "POST">
     {% csrf_token %}
     <p>Login into MineFinder:</p>
     {{ formlogin }}
     <input type="submit" value="Submit">
-</form>
+</form> -->
 
 {% endblock %}
