--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -8,7 +8,11 @@
     <p style = "float:right;">Board Name: {{request.POST.title}}<p>
     <a style = "float:right;" href="profile/" >{{request.user}}'s profile</a> -->
     <p style = "float:right;">EN</p>
-    <a style = "float:right;" href="profile/">{{request.user}}@gmail.com</a>
+    {% if request.user.is_authenticated %}
+        <a style = "float:right;" href="profile/">{{request.user}}@gmail.com</a>
+    {% else %}
+        <a style = "float:right;" href="login/">Log In</a>
+    {% endif %}
     <p style = "float:right;">Projects</p>
     <p style = "float:right;">FAQ</p>
     <p style = "float:right;">Deal Room</p>
