Added buttons to profile page

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -34,8 +34,13 @@
         <p style = "top: 68%; left: 31.25%; position: absolute; padding: 0px;">User Tiering</p>
         <p style = "top: 70%; left: 31.25%; position: absolute; padding: 0px;">Password</p>
 
+        <button class="button" style = "color:black;background-color:#DFDFDF;font-size:28px;padding:5px 110px; position: absolute; top: 13.5%; left: 6.3%;" name = "Account" value = "Account">Account</button>
+        <button class="button" style = "color:black;background-color:#F2F2F2;font-size:28px;padding:5px 70px; position: absolute; top: 17%; left: 6.3%;" name = "Auth" value = "Auth">Authentication</button>
+        <button class="button" style = "color:black;background-color:#F2F2F2;font-size:28px;padding:5px 112px; position: absolute; top: 20.5%; left: 6.3%;" name = "Sec" value = "Sec">Security</button>
+        <button class="button" style = "color:white;background-color:#B85C38;font-size:28px;padding:5px 70px; position: absolute; top: 24%; left: 6.3%;" name = "Upload" value = "Upload">Upload Project</button>
+
         <form method='get' action='#'>
-            <button class="button" style = "color:white;background-color:#B85C38;font-size:28px;padding:18px 36px; position: absolute; top: 90%; left: 9.1%;" name = "Exit" value = "Exit">Sign Out</button>
+            <button class="button" style = "color:white;background-color:#B85C38;font-size:28px;padding:5px 90px; position: absolute; top: 90%; left: 7.15%;" name = "Exit" value = "Exit">Sign Out</button>
         </form>
     </p>
 </div>
