--- a/src/templates/splash.html
+++ b/src/templates/splash.html
@@ -7,7 +7,7 @@
     <img src="{% static 'images/darksplash2.png' %}" alt="OreFox Icon" style="background-color:white;object-fit:fill;" width=2560 height=1440>
     <div class = "centered" style = "line-height: 96px;"><b>Project promotion and evaluation made smarter</b></div>
     <div class = "centered" style = "font-size:36px;padding-top:400px;">MineFinder is a global platform connecting buyers and sellers of mineral exploration and mining projects.</div>
-    <div class = "centered" style = "padding-top:600px;"><button class="button" style = "color:white;background-color:#B85C38;font-size:28px;padding:18px 36px;"><a href = "register/"><b>Register Now</b></a></button></div>
+    <div class = "centered" style = "padding-top:600px;"><button class="button" style = "color:white;background-color:#B85C38;font-size:28px;padding:18px 36px;"><a href = "/register/"><b>Register Now</b></a></button></div>
 </div>
 
 <div class = "w3-container" style = "background-color: white;">
