--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -9,9 +9,9 @@
     <a style = "float:right;" href="profile/" >{{request.user}}'s profile</a> -->
     <p style = "float:right;">EN</p>
     {% if request.user.is_authenticated %}
-        <a style = "float:right;" href="profile/">{{request.user}}@gmail.com</a>
+        <a style = "float:right;" href="/profile/">{{request.user}}@gmail.com</a>
     {% else %}
-        <a style = "float:right;" href="login/">Log In</a>
+        <a style = "float:right;" href="/login/">Log In</a>
     {% endif %}
     <p style = "float:right;">Projects</p>
     <p style = "float:right;">FAQ</p>
