--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -11,7 +11,7 @@
         <div style = "font-size: 24px;">
             <form action = "" method = "POST">
                 {% csrf_token %}
-                {{ formlogin }}
+                {{ formlogin.as_p }}
                 <input type="submit" value="Submit">
             </form>
         </div>
