--- a/src/chat/templates/chat/room.html
+++ b/src/chat/templates/chat/room.html
@@ -1,15 +1,15 @@
-{% extends "home/base.html" %}
-
-<!-- Specific CSS goes HERE -->
-{% block stylesheets %}
-{% endblock stylesheets %}
-{% block content %}
-<div style="height:800px">
-    <textarea id="chat-log" cols="200" rows="30"></textarea><br>
-    <input style="height:80px;margin-top:20px;" id="chat-message-input" type="text" size="100">
-    <input style="height:80px;margin-top:20px;padding:0 20px;" id="chat-message-submit" type="button" value="Send">
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8"/>
+    <title>Chat Room</title>
+</head>
+<body>
+    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
+    <input id="chat-message-input" type="text" size="100"><br>
+    <input id="chat-message-submit" type="button" value="Send">
     {{ room_name|json_script:"room-name" }}
-</div>
+ 
 <script>
     // 获取房间名
     const roomName = JSON.parse(document.getElementById('room-name').textContent);
