Created dummy projects page

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -13,7 +13,7 @@
     {% else %}
         <a style = "float:right;" href="/login/">Log In</a>
     {% endif %}
-    <p style = "float:right;">Projects</p>
+    <a style = "float:right;" href="/projects/">Projects</a>
     <p style = "float:right;">FAQ</p>
     <p style = "float:right;">Deal Room</p>
     <a style = "float:right;" href="gallery">Gallery</a>
