Projects page functionality update
Image upload added also

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -16,7 +16,7 @@
     <a style = "float:right;" href="/projects/">Projects</a>
     <p style = "float:right;">FAQ</p>
     <p style = "float:right;">Deal Room</p>
-    <a style = "float:right;" href="gallery">Gallery</a>
+    <!-- <a style = "float:right;" href="gallery">Gallery</a> -->
     <p style = "float:right;">Upload Project</p>
 </div>
 
