--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -4,19 +4,23 @@
 
 {% load static %}
 
-<p>Projects Page</p>
+<img src="{% static 'images/factory.jpg' %}" alt="background" style="background-color:white;object-fit:fill;" width=2560 height=810>
 
-<p>Test:</p>
+<div class = "w3-container" style = "background-color: white; position: relative;"></div>
 {% for project in projects %}
-    {{project.name}}
-    {{project.image}}
+    <p style = "float: left; width: 15%;text-align: center;margin: 200px 320px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 5px;">
+        <img src="{{project.image.url}}" alt="meeting" style = "width:100%;"></img>
+        <br><b>{{project.name}}</b>
+        <br>{{project.description}}
+        <br> {{project.value}}
+    </p>
 {% endfor %}
 
-<form action = "" method = "POST">
+<form action = "" method = "POST" enctype="multipart/form-data" style = "position: relative;">
     {% csrf_token %}
     {{ projectsform.as_p }}
     <input type="submit" value="Submit">
 </form>
-
+</div>
 
 {% endblock %}
