Project details init

--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -16,11 +16,11 @@
     </p>
 {% endfor %}
 
-<form action = "" method = "POST" enctype="multipart/form-data" style = "position: relative;">
+<!-- <form action = "" method = "POST" enctype="multipart/form-data" style = "position: relative;">
     {% csrf_token %}
     {{ projectsform.as_p }}
     <input type="submit" value="Submit">
-</form>
+</form> -->
 </div>
 
 {% endblock %}
