--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -17,7 +17,7 @@
     <p style = "float:right;">FAQ</p>
     <p style = "float:right;">Deal Room</p>
     <!-- <a style = "float:right;" href="gallery">Gallery</a> -->
-    <p style = "float:right;">Upload Project</p>
+    <a style = "float:right;" href="/upload/">Upload Project</a>
 </div>
 
 
