--- a/src/templates/projectdetails.html
+++ b/src/templates/projectdetails.html
@@ -4,16 +4,11 @@
 
 {% load static %}
 
-<img src="{% static 'images/uploadbanner.jpg' %}" alt="background" style="background-color:white;object-fit:fill;" width=2560 height=810>
+<img src="{% static 'images/projectdetailsbanner.jpg' %}" alt="background" style="background-color:white;object-fit:fill;" width=2560 height=810>
 
 <div style = "height: 80%; position: relative; padding-top: 20px; padding-bottom: 20px; font-family: 'Nunito';">
     <p style = "float: left; width: 90%; height: 2560px;text-align: center; margin-left: 5%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 50px; position:relative;">
-        <p style = "position: absolute; left: 10%; padding-top: 2%; font-size: 60px; color: #B85C38;"><b>Exploration Project Submission Template</b></p>
-        <form action = "" method = "POST" enctype="multipart/form-data" style = "position: absolute; left: 10%; padding-top: 8%;">
-            {% csrf_token %}
-            {{ projectsform.as_p }}
-            <input type="submit" value="Submit">
-        </form>
+        <p style = "position: absolute; left: 10%; padding-top: 2%; font-size: 60px; color: #B85C38;"><b>Project Details</b></p>
     </p>
 </div>
 
