--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -15,7 +15,7 @@
     {% endif %}
     <a style = "float:right;" href="/projects/">Projects</a>
     <p style = "float:right;">FAQ</p>
-    <p style = "float:right;">Deal Room</p>
+    <a style = "float:right;" href="/dealroom/">Deal Room</a>
     <!-- <a style = "float:right;" href="gallery">Gallery</a> -->
     <a style = "float:right;" href="/upload/">Upload Project</a>
 </div>
