--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -178,7 +178,18 @@
                   border-radius: 4px;
                   box-sizing: border-box;
                 }
+
+                .wrapper {
+                  min-height: 100%;
+                  height: auto !important;
+                  height: 100%;
+                  margin: 0 auto -142px; /* the bottom margin is the negative value of the footer's height */
+                }
                 
+                .footer, .push {
+                  height: 142px; /* .push must be the same height as .footer */
+                }
+                              
         </style>
 </head>
 
